refactor: 인터셉터별로 관리하는 path를 unmodifiable list로 변경